# HyprGrid

./: Cargo.toml  HOME_ROW_RESEARCH.md  HyprGrid_Architecture.md  KEYD_HOME_ROW_MODS.md  README.md  hg_config.conf.example  hyprctl_return_monitors.json  hyprland.conf.example
.obsidian/: workspace.json
development/: DONE-step_02_hyprland_integration.md  DONE-step_03_grid_calculations.md  step_01_configuration_parsing.md  step_04_gui_overlay.md  step_05_input_handling.md  step_06_ydotool_commands.md  step_07_execution_flow.md
kanata/: README.md  kanata.kbd.accentuation  kanata.kbd.commom
src/: config.rs  grid.rs  main.rs
