[package]
name = "hyprgrid"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A keyboard-driven mouse controller for Hyprland"
license = "MIT"
repository = "https://github.com/gabesan21/HyprGrid"

[dependencies]
# GUI framework - iced works with Wayland via winit
iced = "0.13"

# Wayland client libraries
wayland-client = "0.31"
wayland-protocols = "0.31"

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
